Make `bind_config_options_recursive_clients` null by default to avoid having to keep in sync with upstream defaults

--- a/templates/config/named-options.conf.j2
+++ b/templates/config/named-options.conf.j2
@@ -140,7 +140,9 @@ options {
 
 	recursion {{ 'yes' if bind_config_options_recursion else 'no' }};
 
+	{% if bind_config_options_recursive_clients %}
 	recursive-clients {{ bind_config_options_recursive_clients }};
+	{% endif %}
 
 	{% if bind_config_options_allow_recursion | length > 0 %}
 	allow-recursion {
