Make `bind_config_options_dnssec_validation` null by default to avoid having to keep in sync with upstream defaults

--- a/templates/config/named-options.conf.j2
+++ b/templates/config/named-options.conf.j2
@@ -172,7 +172,9 @@ options {
 	};
 	{% endif %}
 
+	{% if bind_config_options_dnssec_validation %}
 	dnssec-validation {{ bind_config_options_dnssec_validation }};
+	{% endif %}
 
 	{% if bind_config_options_notify_source | length > 0 %}
 	notify-source {% for item in bind_config_options_notify_source %}{{ item }}{% if not loop.last %} {% endif %}{% endfor %};
